kube/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: $BUILD_ENV
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: registry.digitalocean.com/clockwork/spacetimedb_grafana:$GRAFANA_IMAGE_DIGEST
        ports:
        - containerPort: 3000
          name: grafana
      imagePullSecrets:
      - name: clockwork
