kube/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: $BUILD_ENV
spec:
  ports:
  - port: 3000
  clusterIP: None
  selector:
    app: grafana
